turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:8: error: expected class or object definition
def step() {
^LangtonsAnt:38: error: expected class or object definition
 en utilisant getCouleurSol()). Si c'est blanc, changez la en noir, tournez à droite et avancez d'une case.
 ^LangtonsAnt:50: error: Unmatched closing brace '}' ignored here
}
^