turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c: Color) {
   	setCouleurBrosse(c)
   	baisseBrosse()
   	leveBrosse()
}
	
}
def step() {
	var x=getCouleurSol()
	if (x==Color.white){
		setCouleurSol(Color.black)
		droite()
		avance()
	}else{
		serCouleurSol(Color.white)
		gauche()
		avance()
	}
}


















 en utilisant getCouleurSol()). Si c'est blanc, changez la en noir, tournez à droite et avancez d'une case.
 Si la couleur du sol est le noir, changez la en blanc, tournez à gauche et avancez d'une case.
